Created Blog Map

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.5",
+        "drupal/address": "^1.4",
         "drupal/admin_toolbar": "^1.24",
         "drupal/backup_migrate": "^4.0",
         "drupal/bg_image_formatter": "^1.2",
@@ -48,6 +49,8 @@
         "drupal/entity_usage": "^2.0@alpha",
         "drupal/examples": "1.x-dev",
         "drupal/file_browser": "^1.1",
+        "drupal/geolocation": "^1.11",
+        "drupal/geolocation_address-geolocation_address": "^1.0",
         "drupal/honeypot": "^1.27",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/jquery_colorpicker": "^1.4",
