--- a/config/sync/core.entity_view_display.node.blog.default.yml
+++ b/config/sync/core.entity_view_display.node.blog.default.yml
@@ -5,9 +5,12 @@ dependencies:
   config:
     - field.field.node.blog.field_blog_category
     - field.field.node.blog.field_blog_description
+    - field.field.node.blog.field_blog_region
+    - field.field.node.blog.field_geolocation
     - field.field.node.blog.field_image
     - node.type.blog
   module:
+    - geolocation
     - image
     - options
     - text
@@ -30,6 +33,46 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
+  field_blog_region:
+    weight: 105
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
+  field_geolocation:
+    weight: 104
+    label: hidden
+    settings:
+      title: ''
+      set_marker: '1'
+      common_map: ''
+      info_text: ''
+      use_overridden_map_settings: 0
+      google_map_settings:
+        type: ROADMAP
+        zoom: '10'
+        minZoom: 0
+        maxZoom: 18
+        rotateControl: 0
+        mapTypeControl: 1
+        streetViewControl: 1
+        zoomControl: 1
+        fullscreenControl: 0
+        scrollwheel: 1
+        disableDoubleClickZoom: 0
+        draggable: 1
+        height: 400px
+        width: 100%
+        info_auto_display: 1
+        marker_icon_path: ''
+        disableAutoPan: 1
+        style: ''
+        preferScrollingToZooming: 0
+        gestureHandling: auto
+    third_party_settings: {  }
+    type: geolocation_map
     region: content
   field_image:
     weight: 102
