--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -1,4 +1,5 @@
 module:
+  address: 0
   admin_toolbar: 0
   admin_toolbar_tools: 0
   automated_cron: 0
@@ -35,6 +36,9 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  geolocation: 0
+  geolocation_address: 0
+  geolocation_google_places_api: 0
   help: 0
   history: 0
   honeypot: 0
