--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.event.field_event_description_full
     - field.field.node.event.field_event_image
     - field.field.node.event.field_event_registration_form
+    - field.field.node.event.field_library_category
     - node.type.event
   module:
     - datetime
@@ -65,4 +66,5 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_library_category: true
