--- a/config/sync/core.entity_form_display.paragraph.two_columns_paragraph.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.two_columns_paragraph.default.yml
@@ -1,10 +1,10 @@
-uuid: 0647f9d8-efd8-4548-92d5-e9d8d069f3a2
+uuid: 74b1108d-0026-4235-9ae7-04cb0b95165b
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.two_columns_paragraph.field_left_column
-    - field.field.paragraph.two_columns_paragraph.field_right_column
+    - field.field.paragraph.two_columns_paragraph.field_le
+    - field.field.paragraph.two_columns_paragraph.field_r
     - paragraphs.paragraphs_type.two_columns_paragraph
   module:
     - text
@@ -13,7 +13,7 @@ targetEntityType: paragraph
 bundle: two_columns_paragraph
 mode: default
 content:
-  field_left_column:
+  field_le:
     weight: 0
     settings:
       rows: 5
@@ -21,7 +21,7 @@ content:
     third_party_settings: {  }
     type: text_textarea
     region: content
-  field_right_column:
+  field_r:
     weight: 1
     settings:
       rows: 5
