--- a/config/sync/core.entity_view_display.paragraph.job_.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.job_.default.yml
@@ -1,16 +1,16 @@
-uuid: eb1dc5b9-8c3d-41d1-b777-0ed7352c7792
+uuid: 553ef2f9-9075-4331-81d9-87488b10c99b
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.job_description.field_description
-    - field.field.paragraph.job_description.field_our_products
-    - paragraphs.paragraphs_type.job_description
+    - field.field.paragraph.job_.field_description
+    - field.field.paragraph.job_.field_our_products
+    - paragraphs.paragraphs_type.job_
   module:
     - text
-id: paragraph.job_description.default
+id: paragraph.job_.default
 targetEntityType: paragraph
-bundle: job_description
+bundle: job_
 mode: default
 content:
   field_description:
