--- a/config/sync/core.entity_view_display.paragraph.two_columns_paragraph.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.two_columns_paragraph.default.yml
@@ -1,10 +1,10 @@
-uuid: ae017aec-5e85-4cdb-b1aa-2bf92d048de5
+uuid: a3cd2271-4f88-4e2f-9861-9090792e6337
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.two_columns_paragraph.field_left_column
-    - field.field.paragraph.two_columns_paragraph.field_right_column
+    - field.field.paragraph.two_columns_paragraph.field_le
+    - field.field.paragraph.two_columns_paragraph.field_r
     - paragraphs.paragraphs_type.two_columns_paragraph
   module:
     - text
@@ -13,14 +13,14 @@ targetEntityType: paragraph
 bundle: two_columns_paragraph
 mode: default
 content:
-  field_left_column:
+  field_le:
     weight: 0
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
-  field_right_column:
+  field_r:
     weight: 1
     label: hidden
     settings: {  }
