--- a/config/sync/field.field.paragraph.two_columns_paragraph.field_r.yml
+++ b/config/sync/field.field.paragraph.two_columns_paragraph.field_r.yml
@@ -1,14 +1,14 @@
-uuid: f7ab9223-7081-4c46-9ea0-9e0ca27abbe0
+uuid: 18ed8a67-0f39-46cd-b9ef-4785ce33cbcf
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_right_column
+    - field.storage.paragraph.field_r
     - paragraphs.paragraphs_type.two_columns_paragraph
   module:
     - text
-id: paragraph.two_columns_paragraph.field_right_column
-field_name: field_right_column
+id: paragraph.two_columns_paragraph.field_r
+field_name: field_r
 entity_type: paragraph
 bundle: two_columns_paragraph
 label: 'right column'
