--- a/config/sync/views.view.press_event.yml
+++ b/config/sync/views.view.press_event.yml
@@ -55,7 +55,7 @@ display:
         type: some
         options:
           items_per_page: 3
-          offset: 0
+          offset: 8
       style:
         type: default
         options:
@@ -309,6 +309,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
+      block_hide_empty: true
     cache_metadata:
       max-age: -1
       contexts:
