--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,21 @@
                     "reference": "master"
                 }
             }
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "aos",
+                "type": "drupal-library",
+                "version": "2.3.2",
+                "source": {
+                    "url": "https://github.com/michalsnik/aos",
+                    "type": "git",
+                    "reference": "master"
+                }
+            }
         }
+
     ],
     "require": {
         "composer/installers": "^1.2",
@@ -78,7 +92,8 @@
         "oomphinc/composer-installers-extender": "^1.1",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
-        "webmozart/path-util": "^2.3"
+        "webmozart/path-util": "^2.3",
+        "aos": "^2.3.2"
     },
     "require-dev": {
         "webflo/drupal-core-require-dev": "~8.5.3"
